--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Opencart_framework_V1</name>
+	<name>Selenium_Java_ATB</name>
 	<comment></comment>
 	<projects>
 	</projects>
